Adds iostream and removes friend to fix compile errors. 	- Also adds Makefile rule for building main from nasty.cpp

--- a/week-2/Makefile
+++ b/week-2/Makefile
@@ -13,3 +13,6 @@ test: test.cpp ../catch/catch.o function.cpp
 	#$(CXX) $(CXXFLAGS) test.cpp ../catch/catch.o -o test
 	$(CXX) $(CXXFLAGS) $^ -o $@
 	./$@
+
+main: nasty.cpp student.o
+	$(CXX) $(CXXFLAGS) -o $@ $^
