Adding test start

--- a/week-4-search-and-analysis/Makefile
+++ b/week-4-search-and-analysis/Makefile
@@ -11,3 +11,7 @@ main: main.cpp linear-search.o binary-search.o
 
 clean:
 	$(RM) main *.o
+
+test-search: test-search.cpp search.o ../catch/catch.o
+	$(CXX) $(CXXFLAGS) -o $@ $^
+	./$@ --success
