Adding node constructor

--- a/week-7-templates/Makefile
+++ b/week-7-templates/Makefile
@@ -3,3 +3,7 @@ CXXFLAGS = -Wall
 test-utils: test/test-utils.cpp ../catch/catch.o utils.o
 	$(CXX) $(CXXFLAGS) -o test/$@ $^
 	test/$@ --success
+
+test-node: test/test-node.cpp ../catch/catch.o node.o
+	$(CXX) $(CXXFLAGS) -o test/$@ $^
+	test/$@ --success
