--- a/week-7-templates/Makefile
+++ b/week-7-templates/Makefile
@@ -7,3 +7,7 @@ test-utils: test/test-utils.cpp ../catch/catch.o utils.o
 test-node: test/test-node.cpp ../catch/catch.o node.o
 	$(CXX) $(CXXFLAGS) -o test/$@ $^
 	test/$@ --success
+
+test-list: test/test-list.cpp ../catch/catch.o node.o list.o
+	$(CXX) $(CXXFLAGS) -o test/$@ $^
+	test/$@ --success
