--- a/week-12-trees/Makefile
+++ b/week-12-trees/Makefile
@@ -1,13 +1,9 @@
 CXX = g++
 CXXFLAGS = -Wall
-test-utils: test/test-utils.cpp ../catch/catch.o utils.o
-	$(CXX) $(CXXFLAGS) -o test/$@ $^
-	test/$@ --success
-
 test-node: test/test-node.cpp ../catch/catch.o node.o
 	$(CXX) $(CXXFLAGS) -o test/$@ $^
 	test/$@ --success
 
-test-list: test/test-list.cpp ../catch/catch.o node.o list.o
+test-tree: test/test-tree.cpp ../catch/catch.o node.o tree.o
 	$(CXX) $(CXXFLAGS) -o test/$@ $^
 	test/$@ --success
